--- a/SkrzynkaListow/index.html
+++ b/SkrzynkaListow/index.html
@@ -48,7 +48,7 @@
                         <div class="mailbox-handle" id="mailbox-handle">
                             <i class="fas fa-chevron-down"></i>
                         </div>
-                        <div class="mailbox-number">13/14</div>
+                        <div class="mailbox-number">16e</div>
                         <div class="love-label">
                             <i class="fas fa-heart"></i>
                             Martusi
