--- a/SkrzynkaListow/index.html
+++ b/SkrzynkaListow/index.html
@@ -16,20 +16,20 @@
     <!-- Główny kontener -->
     <div class="container">
         <!-- Nagłówek -->
-        <header class="main-header">
-            <div class="header-content">
-                <h1 class="title animate__animated animate__fadeInDown">
-                    <i class="fas fa-heart heart-icon"></i>
-                    Skrzynka Listów Miłosnych
-                    <i class="fas fa-heart heart-icon"></i>
-                </h1>
-                <p class="subtitle animate__animated animate__fadeIn animate__delay-1s">Dla Mojej Ukochanej Martusi</p>
-                <div class="date-info animate__animated animate__fadeIn animate__delay-2s">
-                    <i class="fas fa-calendar-alt"></i>
-                    <span id="current-date">Ładuję datę...</span>
-                </div>
-            </div>
-        </header>
+			<header class="main-header">
+				<div class="header-content">
+					<h1 class="title animate__animated animate__fadeInDown">
+						<i class="fas fa-heart heart-icon"></i>
+						Martusia
+						<i class="fas fa-heart heart-icon"></i>
+					</h1>
+					<p class="subtitle animate__animated animate__fadeIn animate__delay-1s">Moja Skrzynka Miłości</p>
+					<div class="date-info animate__animated animate__fadeIn animate__delay-2s">
+						<i class="fas fa-calendar-alt"></i>
+						<span id="current-date">Ładuję datę...</span>
+					</div>
+				</div>
+			</header>
 
         <!-- Główna skrzynka na listy -->
         <main class="mailbox-container">
