--- a/SkrzynkaListow/calendar.html
+++ b/SkrzynkaListow/calendar.html
@@ -219,7 +219,15 @@
                 fileName: "28-03-2026.html",
                 read: false,
                 description: "Wspominamy piękne chwile razem."
-            }
+            },
+			{
+				id: 2.1,
+				date: "2026-02-14",
+				title: "Przepraszam!",
+				fileName: "14-02-2026-bonus.html",
+				read: false,
+				description: "Dodatkowy, sekretny list na Walentynki."
+			},
         ];
         
         // Rozszerzanie danych o listy na cały rok (co tydzień)
