--- a/SkrzynkaListow/letters/14-02-2026-bonus.html
+++ b/SkrzynkaListow/letters/14-02-2026-bonus.html
@@ -13,7 +13,7 @@
         
         body {
             font-family: 'Georgia', serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #e9e9e9 100%);
+            background: url('../assets/images/paper-texture.jpg');
             min-height: 100vh;
             padding: 20px;
             display: flex;
